# katengine_cpp

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
sample_app/: CMakeLists.txt
sample_app/src/app/: main.cpp
src/kat/: engine.hpp
src/kat/os/: linux.cpp  win32.cpp  window.cpp  window.hpp
